downloading google fonts for title/paragraph fonts

--- a/index.html
+++ b/index.html
@@ -15,7 +15,21 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fugaz+One&family=Ubuntu+Mono&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/portofio.css" />
+
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Hello Word</h1>
+    <p>
+      This is a test paragraph to see what the font looks like. Testing testing
+      testing. Test test test.
+    </p>
+  </body>
 </html>
