download fontawesome to index file

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       href="https://fonts.googleapis.com/css2?family=Fugaz+One&family=Ubuntu+Mono&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/da2e738da3.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="styles/portofio.css" />
 
     <title>Document</title>
