setting up heading of homepage

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     ></script>
   </head>
   <body>
-    <h1>Hello Word</h1>
-    <p>
-      This is a test paragraph to see what the font looks like. Testing testing
-      testing. Test test test.
-    </p>
+    <div class="hero">
+      <h2><i class="fa-duotone fa-hand-wave"></i> Hello, I am</h2>
+      <h1>Catherine Morgan</h1>
+      <h3>🇺🇸 Front-end developer, based in Florida</h3>
+    </div>
   </body>
 </html>
