--- a/index.html
+++ b/index.html
@@ -31,10 +31,47 @@
     ></script>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg fixed-top navigation-bar">
+      <div class="container-fluid">
+        <a class="navbar-brand text-white brand-name" href="#"
+          >Catherine Morgan</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active text-info" aria-current="page" href="#"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-light" href="about.html">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-light" href="about.html#contact"
+                >Contact Me</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <div class="hero">
       <h2><i class="fa-duotone fa-hand-wave"></i> Hello, I am</h2>
       <h1>Catherine Morgan</h1>
       <h3>🇺🇸 Front-end developer, based in Florida</h3>
     </div>
+    <p class="text-center m-5">Featered Projects</p>
   </body>
 </html>
