--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     ></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg fixed-top navigation-bar">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark navigation-bar">
       <div class="container-fluid">
         <a class="navbar-brand text-white brand-name" href="#"
           >Catherine Morgan</a
