Added homepage content, homepage images, homepage css, updated css root names.

--- a/index.html
+++ b/index.html
@@ -73,5 +73,80 @@
       <h3>🇺🇸 Front-end developer, based in Florida</h3>
     </div>
     <p class="text-center m-5">Featered Projects</p>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <img
+            src="images/weather-app.PNG"
+            class="img-fluid rounded"
+            alt="Weather App Photo"
+          />
+        </div>
+        <div class="col-md-6">
+          <h2 class="md-3 project-title text-center">Weather App Project</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="mt-5">
+            <a href="#" class="primary-link" title="Weather App Link"
+              >Launch Weather App</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-md-6">
+          <h2 class="md-3 project-title text-center">
+            Practice portofio Project
+          </h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="mb-5 mt-5">
+            <a href="#" class="primary-link" title="Portfolio Project Link"
+              >Launch Portofio App</a
+            >
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img
+            src="images/portfolio-app.PNG"
+            class="img-fluid rounded"
+            alt="Practice Portfolio Website Photo"
+          />
+        </div>
+      </div>
+    <div class="row mt-5">
+        <div class="col-md-6">
+          <img
+            src="images/rock-app.PNG"
+            class="img-fluid rounded"
+            alt="Rocks Project Website Photo"
+          />
+        </div>
+
+        <div class="col-md-6">
+          <h2 class="md-3 project-title text-center">Rocks Project</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="mt-5">
+            <a href="#" class="primary-link" title="Rocks Project Link"
+              >Launch Rocks Project</a
+            >
+          </div>
+        </div>
+    </div>
+      </div>
+    </div>
   </body>
 </html>
