--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
     <p class="text-center m-5">Featered Projects</p>
     <div class="container">
-      <div class="row">
+      <div class="row project-info">
         <div class="col-md-6">
           <img
             src="images/weather-app.PNG"
@@ -82,7 +82,7 @@
             alt="Weather App Photo"
           />
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 mt-3">
           <h2 class="md-3 project-title text-center">Weather App Project</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -97,7 +97,7 @@
           </div>
         </div>
       </div>
-      <div class="row mt-5">
+      <div class="row mt-5 project-info">
         <div class="col-md-6">
           <h2 class="md-3 project-title text-center">
             Practice portofio Project
@@ -122,7 +122,7 @@
           />
         </div>
       </div>
-    <div class="row mt-5">
+      <div class="row mt-5 project-info">
         <div class="col-md-6">
           <img
             src="images/rock-app.PNG"
@@ -131,7 +131,7 @@
           />
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-6 mt-3">
           <h2 class="md-3 project-title text-center">Rocks Project</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -145,7 +145,6 @@
             >
           </div>
         </div>
-    </div>
       </div>
     </div>
   </body>
