Updating project titles

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <div class="row mt-5 project-info">
         <div class="col-md-6">
           <h2 class="md-3 project-title text-center">
-            Practice portofio Project
+            Practice Portofio Project
           </h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -110,7 +110,7 @@
           </p>
           <div class="mb-5 mt-5">
             <a href="#" class="primary-link" title="Portfolio Project Link"
-              >Launch Portofio App</a
+              >Launch Practice Portofio App</a
             >
           </div>
         </div>
@@ -132,7 +132,7 @@
         </div>
 
         <div class="col-md-6 mt-3">
-          <h2 class="md-3 project-title text-center">Rocks Project</h2>
+          <h2 class="md-3 project-title text-center">Rocks Webpage Project</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -141,7 +141,7 @@
           </p>
           <div class="mt-5">
             <a href="#" class="primary-link" title="Rocks Project Link"
-              >Launch Rocks Project</a
+              >Launch Rocks Webpage Project</a
             >
           </div>
         </div>
