--- a/index.html
+++ b/index.html
@@ -74,73 +74,78 @@
     </div>
     <p class="text-center m-5">Featered Projects</p>
     <div class="container">
-      <div class="row project-info">
-        <div class="col-md-6">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
           <img
             src="images/weather-app.PNG"
-            class="img-fluid rounded"
+            class="img-fluid rounded image-border"
             alt="Weather App Photo"
           />
         </div>
-        <div class="col-md-6 mt-3">
-          <h2 class="md-3 project-title text-center">Weather App Project</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="mt-5">
-            <a href="#" class="primary-link" title="Weather App Link"
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5 project-title text-center">Weather App Project</h2>
+            <p class="mb-5 text-muted">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+
+            <a href="#" class="btn primary-link" title="Weather App Link"
               >Launch Weather App</a
             >
           </div>
         </div>
       </div>
-      <div class="row mt-5 project-info">
-        <div class="col-md-6">
-          <h2 class="md-3 project-title text-center">
-            Practice Portofio Project
-          </h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="mb-5 mt-5">
-            <a href="#" class="primary-link" title="Portfolio Project Link"
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5 project-title text-center">
+              Practice Portofio Project
+            </h2>
+            <p class="mb-5 text-muted">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+
+            <a href="#" class="btn primary-link" title="Portfolio Project Link"
               >Launch Practice Portofio App</a
             >
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col d-none d-lg-block">
           <img
             src="images/portfolio-app.PNG"
-            class="img-fluid rounded"
+            class="img-fluid rounded image-border"
             alt="Practice Portfolio Website Photo"
           />
         </div>
       </div>
-      <div class="row mt-5 project-info">
-        <div class="col-md-6">
+      <div class="row">
+        <div class="col d-none d-lg-block">
           <img
             src="images/rock-app.PNG"
-            class="img-fluid rounded"
+            class="img-fluid rounded image-border"
             alt="Rocks Project Website Photo"
           />
         </div>
 
-        <div class="col-md-6 mt-3">
-          <h2 class="md-3 project-title text-center">Rocks Webpage Project</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="mt-5">
-            <a href="#" class="primary-link" title="Rocks Project Link"
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5 project-title text-center">
+              Rocks Webpage Project
+            </h2>
+            <p class="mb-5 text-muted">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+
+            <a href="#" class="btn primary-link" title="Rocks Project Link"
               >Launch Rocks Webpage Project</a
             >
           </div>
