Filling in descriptions to my projects

--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
           <div class="project-description">
             <h2 class="mb-5 project-title text-center">Weather App Project</h2>
             <p class="mb-5 text-muted">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.
+              This is the second project I created wile learning to code with
+              SheCodes. I made this weather application using HTML, CSS,
+              JavaScript, Editor, API, GitHub, Bootstrap, and learned how to
+              host it on the web. This weather application uses real-time data.
             </p>
 
             <a href="#" class="btn primary-link" title="Weather App Link"
@@ -105,14 +105,18 @@
               Practice Portofio Project
             </h2>
             <p class="mb-5 text-muted">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.
+              This is actually a practice webpage I created while learning how
+              to code. I made this weather application using HTML, CSS,
+              JavaScript, Editor, API, GitHub, Bootstrap, Flexbox, SEO, and
+              making it responsive. This webpage focused on having multiple
+              pages, using a navigation bar, and being responsive to multiple
+              screen sizes. I have this listed with with my two other projects
+              becuase the techniques used to make it responsive helped me create
+              this current portfolio webpage.
             </p>
 
             <a href="#" class="btn primary-link" title="Portfolio Project Link"
-              >Launch Practice Portofio App</a
+              >Launch Practice Portfolio App</a
             >
           </div>
         </div>
@@ -139,10 +143,11 @@
               Rocks Webpage Project
             </h2>
             <p class="mb-5 text-muted">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.
+              This was my first project that I made while learning to code with
+              SheCodes. The information on this page is limited around the three
+              main types of rocks. It is a simple webpage created using HTML,
+              CSS, JavaScript, and Editor. It's definitely not perfect, but it
+              was really fun to create.
             </p>
 
             <a href="#" class="btn primary-link" title="Rocks Project Link"
