Filling in information for About Me and Skills section; working on some CSS for about.html file

--- a/about.html
+++ b/about.html
@@ -69,5 +69,42 @@
         </div>
       </div>
     </nav>
+    <div class="hero">
+        <h1>Hello!</h1>
+        <h2>A little something bout me</h2>
+      <p>
+        My name is Catherine and my favorite thing in life is learning. My personal goal is to learn
+        something new in ever task/project I complete. I'm a geologist and a
+        font-end developer. I studied geology because I think rocks are
+        intriguing. To be able to look at a landscape and try to visualize how
+        it formed is just as enjoyable as reading a book. This geology degree
+        has led me to environmental remediation. Every project has its own
+        quirks and being able to use my knowledge and skills to help find
+        solutions for groundwater and soil remediation is a wonderful feeling.
+      </br>
+      </br>
+        Along with my love of geology, I have another interest in coding. I'm
+        currently learning how to code through a coding bootcamp called
+        SheCodes. I plan to continue learning more coding skills and techniques through new projects. I'll be displaying those new projects soon, so stay tuned!
+      </br> 
+        I am seeking new opportunities in front-end development and I'm open to work local and/or remotely.
+      </p>
+    </div>
+    <div class="hero-two">
+      <h3 class="coding-title">Here are my current coding skills and tools</h3>
+      <ul class="coding-skills">
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>Editor</li>
+        <li>API</li>
+        <li>GitHub</li>
+        <li>Bootstrat</li>
+        <li>Hosting</li>
+        <li>Flexbox</li>
+        <li>SEO</li>
+        <li>Responsive</li>
+    </ul>
+    </div>
   </body>
 </html>
