Adding links to homepage; adding contact me section

--- a/index.html
+++ b/index.html
@@ -92,7 +92,11 @@
               host it on the web. This weather application uses real-time data.
             </p>
 
-            <a href="#" class="btn primary-link" title="Weather App Link"
+            <a
+              href="https://dreamy-smakager-066cdd.netlify.app/"
+              target="_blank"
+              class="btn primary-link"
+              title="Weather App Link"
               >Launch Weather App</a
             >
           </div>
@@ -115,7 +119,11 @@
               this current portfolio webpage.
             </p>
 
-            <a href="#" class="btn primary-link" title="Portfolio Project Link"
+            <a
+              href="https://luminous-muffin-9dab5b.netlify.app/"
+              target="_blank"
+              class="btn primary-link"
+              title="Portfolio Project Link"
               >Launch Practice Portfolio App</a
             >
           </div>
@@ -150,7 +158,11 @@
               was really fun to create.
             </p>
 
-            <a href="#" class="btn primary-link" title="Rocks Project Link"
+            <a
+              href="https://www.shecodes.io/workshops/shecodes-basics-80fd6cd0-d5b6-4e93-9a4b-8831b9296e93/projects/1152739"
+              target="_blank"
+              class="btn primary-link"
+              title="Rocks Project Link"
               >Launch Rocks Webpage Project</a
             >
           </div>
