Adding ID to contact me section

--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
     </ul>
     </div>
     <div class="hero">
-        <h2 class="secondary-title">You can contact me at</h2>
+        <h2 class="secondary-title" id="contact">You can contact me at</h2>
         
        </br>
        <h3>
