Added/styled footer

--- a/about.html
+++ b/about.html
@@ -130,7 +130,18 @@
         <a href="https://www.shecodes.io/graduates/55539-catherine-morgan" target="_blank" class="btn contact-link">Profile</a>
        </p>
     </div>
-    
+    <footer class="mt-5 text-center footer">
+      <p>
+        This website was coded by
+        <span class="brand-name">Catherine Morgan</span> and is
+        <a
+          href="https://github.com/catmorgan72/Responsive-Final-Project-Portfolio"
+          target="_blank"
+          class="open-source text-decoration-none"
+          >open-sourced</a
+        >
+      </p>
+    </footer>
     
   </body>
 </html>
