--- a/index.html
+++ b/index.html
@@ -169,5 +169,17 @@
         </div>
       </div>
     </div>
+    <footer class="mt-5 text-center footer">
+      <p>
+        This website was coded by
+        <span class="brand-name">Catherine Morgan</span> and is
+        <a
+          href="https://github.com/catmorgan72/Responsive-Final-Project-Portfolio"
+          target="_blank"
+          class="open-source text-decoration-none"
+          >open-sourced</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
